--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -54,6 +54,7 @@ jobs:
       fail-fast: false
       matrix:
         source_branch: [sdk2013-sp, sdk2013-mp, gmod]
+        arch: [x86, x86_64]
 
     runs-on: ubuntu-latest
     container: debian:bullseye
@@ -63,7 +64,11 @@ jobs:
       run: |
         dpkg --add-architecture i386
         apt update
-        apt install -y build-essential git libstdc++6:i386 gcc-multilib g++-multilib
+        if [ "${{ matrix.arch }}" = "x86" ]; then
+          apt install -y build-essential git libstdc++6:i386 gcc-multilib g++-multilib
+        else
+          apt install -y build-essential git
+        fi
 
     - name: Checkout Mini Source SDK
       uses: actions/checkout@v4
@@ -76,19 +81,25 @@ jobs:
         path: ${{ matrix.source_branch }}/src/vphysics_jolt
         submodules: recursive
 
-    - name: Build GCC x86
+    - name: Build
       working-directory: ${{ matrix.source_branch }}/src
       run: |
         chmod +x createjoltprojects.sh
         chmod +x devtools/bin/vpc_linux
         chmod +x devtools/bin/vpc
         chmod +x devtools/gendbg.sh
-        ./createjoltprojects.sh 
-        make -f jolt.mak -j $(nproc)
+
+        ./createjoltprojects.sh
+
+        if [ "${{ matrix.arch }}" = "x86" ]; then
+          make -f jolt.mak -j $(nproc) CFLAGS="-m32" CXXFLAGS="-m32" LDFLAGS="-m32"
+        else
+          make -f jolt.mak -j $(nproc) CFLAGS="-m64" CXXFLAGS="-m64" LDFLAGS="-m64"
+        fi
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: vphysics_jolt_${{ matrix.source_branch }}_linux32
+        name: vphysics_jolt_${{ matrix.source_branch }}_${{ matrix.arch }}_linux
         path: ${{ matrix.source_branch }}/game
         if-no-files-found: error
